2006-05-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py: Catch exceptions of the PixbufLoader that
	occur if nothing or not an image have been downloaded.
	
2006-05-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: finish shading
	* src/GrampsDb/_DbUtils.py: add birth/death index set funcion
	* src/Editors/_EditPerson.py: birth/death index fixes
	* src/DisplayTabs/_PersonEventEmbedList.py: birth/death index fixes
	* src/GrampsWidgets.py: shading fixes
	* src/DisplayModels/_PeopleModel.py: birth/death index fixes

2006-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/Utils.py (probably_alive): Adapt to new birth/death refs.

2006-05-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Use dbstate only to not get out of
	sync with db and active person.

2006-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Convert upgrade
	to using new birth/death reference approach.
	* src/GrampsDb/_GrampsDbBase.py (commit_person): Simplify updating
	of the custom event roles.
	* src/GrampsDb/_WriteXML.py (write_person): Use methods to get
	birth/death ref, not raw attributes.
	* src/RelLib/_Person.py: Convert to using birth and death ref
	indices.
	* src/GrampsDb/_ReadXML.py (start_eventref): Do not reset existing
	birth/deat reference; use methods to get birth/death ref, not raw
	attributes.

2006-05-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: renamed from _FamilyView
	* src/DataViews/__init__.py: use RelationView.py
	* src/DataViews/Makefile.am: update
	* src/DataViews/_FamilyView.py: more shading

2006-05-22  Alex Roitman  <shura@gramps-project.org>
	* data/gramps.schemas.in: Typos.
	* src/DataViews/_PedigreeView.py (rebuild): Typo.

2006-05-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: start shading of data

2006-05-22  Alex Roitman  <shura@gramps-project.org>